<resources>
    <string name="app_name">Face Recognition</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_number_call">Add Number Call</string>
    <string name="personal">Personal</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logo_transition">logoanimation</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="you_do_not_have_an_account">You Do not have an account</string>

    <!--    messages -->
    <string name="message_empty_error">Field can\'t be empty </string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="choose_image">Choose Image</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="forget_passwor_d">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="id">Id</string>
    <string name="name_patient">Name Patient</string>
    <string name="select_images">Select Images</string>
    <string name="must_select_five_images">(Must Select Five Images)</string>
    <string name="update">Update</string>
    <string name="you_have_an_account">you have an account</string>
    <string name="id_home">Id :</string>
    <string name="name_patient_home">Name Patient :</string>
    <string name="age_home">Age :</string>
    <string name="info">
        Controlling Risks is one of the world\'s essential aspects that is taken into consideration.
        With the raise of number of Alzheimer patients  and children who get lost,
        we decided to work on modifying a safety system for our targeted population,
        which is a door lock controlled by a modified face recognition camera.
        These two parts are connected on this mobile application.
        The application aims to look over your child or the patient and sends notification for the guardian in the dangerous statues. \n
        How does this work?\n
        All you have to do is:\n
        1-	Sign up on the application.\n
        2-	Add your data (the guardian for the patient or the child).\n
        3-	Add the patient data.\n
        4-	Upload five images for the patient from different angles.\n
        5-	Add hospital, emergency, and doctor number.\n
        6-	Go ahead and feel free to do your daily routine and safe on your family!\n
    </string>

</resources>
