<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.InfoActivity"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"

        android:src="@drawable/logo_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectImage_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_sky"
        android:drawableEnd="@drawable/ic_attach"
        android:drawableRight="@drawable/ic_attach"
        android:elevation="2dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/choose_image"
        android:textColor="@color/color_hint_text"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_imageview_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_imageview_register"
        app:layout_constraintTop_toBottomOf="@+id/selectphoto_imageview_register"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/edtName_Info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/btn_sky"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectImage_info" />

    <EditText
        android:id="@+id/edtAge_Info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/btn_sky"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName_Info" />

    <EditText
        android:id="@+id/edtPhone_Info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/btn_sky"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAge_Info" />

    <Button
        android:id="@+id/btnSave_Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_green"
        android:elevation="2dp"
        android:fontFamily="@font/bein"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_Info" />

    <ProgressBar
        android:id="@+id/progressBar_Info"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edtPhone_Info"
        app:layout_constraintStart_toStartOf="@+id/edtPhone_Info"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone_Info" />
</androidx.constraintlayout.widget.ConstraintLayout>